Try to build bit-for-bit reproducible zips and tarballs
Refs #89009

--- a/build.gradle
+++ b/build.gradle
@@ -197,6 +197,13 @@ subprojects
         withJavadocJar()
         withSourcesJar()
     }
+
+    // Attempt reproducible zips and tars
+    tasks.withType( AbstractArchiveTask )
+    {
+        preserveFileTimestamps = false
+        reproducibleFileOrder = true
+    }
 }
 
 project(':wres-util')
@@ -1659,6 +1666,13 @@ java
 {
     withJavadocJar()
     withSourcesJar()
+}
+
+// Attempt reproducible zips and tars
+tasks.withType( AbstractArchiveTask )
+{
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
 }
 
 defaultTasks 'installDist', 'test', 'javadoc', 'jacocorootreport'
