Try to build bit-for-bit reproducible systests zips and tarballs
Refs #89009

--- a/systests/build.gradle
+++ b/systests/build.gradle
@@ -68,3 +68,10 @@ distributions
         }
     }
 }
+
+// Attempt reproducible zips and tars
+tasks.withType( AbstractArchiveTask )
+{
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+}
