--- a/compose-workers.template.yml
+++ b/compose-workers.template.yml
@@ -8,6 +8,12 @@ networks:
             config:
                 - subnet: 172.19.254.192/26
                   gateway: 172.19.254.193
+volumes:
+    home:
+        driver_opts:
+            type: "nfs"
+            o: "ro,relatime,vers=4.1,rsize=1048576,wsize=1048576,namlen=255,hard,proto=tcp,timeo=600,retrans=2,sec=sys,local_lock=none,addr=${NFS_HOME_DIR_IP_ADDRESS}"
+            device: "${NFS_HOME_DIR_DEVICE}"
 services:
     worker:
         image: "${DOCKER_REGISTRY}/wres/wres-worker:WORKER_IMAGE"
@@ -18,8 +24,8 @@ services:
         volumes:
          # To write user output data:
          - /mnt/wres_share/evaluations:/mnt/wres_share/evaluations
-         # To read user input data:
-         - /home:/home:ro
+         # To read user input data using read-only nfs mount above:
+         - home:/home:ro
          # To read user input data written by tasker:
          - /mnt/wres_share/input_data:/mnt/wres_share/input_data:ro
          # To read test input data:
