--- a/wres-tasker/Dockerfile
+++ b/wres-tasker/Dockerfile
@@ -2,7 +2,7 @@ FROM registry.access.redhat.com/ubi8/ubi:8.4-203.1622660121
 
 RUN dnf install -y \
     java-11-openjdk-headless-1:11.0.11.0.9-2.el8_4 \
-    unzip-6.0-44.el8 \
+    unzip-6.0-45.el8_4 \
     procps-ng-3.3.15-6.el8 \
     iproute-5.9.0-4.el8 \
     && dnf clean all
