Mop-up late arriving evaluation status messages for evaluations that succeeded, as well as evaluations that failed (so that late arriving messages do not cause an evaluation to be reopened). Allow a small cache (100) of evaluations to accrue for handling these messages.
Fixes #93353

--- a/build.gradle
+++ b/build.gradle
@@ -1239,6 +1239,9 @@ project(':wres-events')
         // JCIP annotations
         compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
+        // Cache
+        implementation 'com.github.ben-manes.caffeine:caffeine:3.0.2'
+
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // JMS API ( QPID client implements 1.1, but 1.1 is not available on maven )
