--- a/wres-vis/Dockerfile
+++ b/wres-vis/Dockerfile
@@ -1,8 +1,8 @@
 # From a base image, make updates
-FROM registry.access.redhat.com/ubi8/ubi:8.4-206
+FROM registry.access.redhat.com/ubi8/ubi:8.4-206.1626828523
 
 RUN dnf install -y \
-    java-11-openjdk-headless-1:11.0.11.0.9-2.el8_4  \
+    java-11-openjdk-headless-1:11.0.12.0.7-0.el8_4  \
     unzip-6.0-45.el8_4 \
     fontconfig-2.13.1-3.el8 \
     dejavu-fonts-common-2.35-7.el8 \
