--- a/compose-workers.template.yml
+++ b/compose-workers.template.yml
@@ -70,7 +70,8 @@ services:
          # The broker uses heap memory to run and direct memory for messages
          - QPID_WORK=/container_home
          - QPID_JAVA_MEM=-Xms256m -Xmx256m -XX:MaxDirectMemorySize=2048m
-         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/mnt/wres_share/heap_dumps/eventsbroker
+         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC
+         - JAVA_OPTS=-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/mnt/wres_share/heap_dumps/eventsbroker
         # Broker heap plus direct memory is 2304m in QPID_JAVA_MEM
         mem_limit: 2560m
         cap_drop:
