--- a/wres-vis/Dockerfile
+++ b/wres-vis/Dockerfile
@@ -9,6 +9,7 @@ RUN dnf install -y \
     dejavu-sans-fonts-2.35-7.el8 \
     procps-ng-3.3.15-6.el8 \
     iproute-5.9.0-4.el8 \
+    hostname-3.20-6.el8.x86_64 \
     && dnf clean all
 
 # Run the app as non-root, so create a non-root user.
