--- a/build.gradle
+++ b/build.gradle
@@ -217,6 +217,8 @@ project(':wres-util')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
+            // CVE-2021-33813
+            exclude group: 'org.jdom', module: 'jdom2'
         }
 
         // Update the org.apache.httpcomponents modules depended upon by cdm
@@ -251,7 +253,7 @@ project(':wres-system')
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.23'
-        compile 'org.liquibase:liquibase-core:4.4.1'
+        compile 'org.liquibase:liquibase-core:4.4.2'
 
         // Use instead of the bridge between JUL and SLF4J. #60801-283
         runtimeOnly 'com.mattbertolini:liquibase-slf4j:4.0.0'
@@ -344,6 +346,8 @@ project(':wres-io')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
+            // CVE-2021-33813
+            exclude group: 'org.jdom', module: 'jdom2'
         }
 
         compile group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
@@ -384,7 +388,7 @@ project(':wres-io')
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1.1-jre'
 
-        testCompile 'org.liquibase:liquibase-core:4.4.1'
+        testCompile 'org.liquibase:liquibase-core:4.4.2'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.11.2'
@@ -733,7 +737,7 @@ project(':wres-config')
         runtimeOnly 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.9'
 
         // Trying json-values based on vavr, potential replacement for xjc/jaxb.
-        testImplementation 'com.github.imrafaelmerino:json-values:9.0.2'
+        testImplementation 'com.github.imrafaelmerino:json-values:9.1.0'
 
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
@@ -837,6 +841,8 @@ project(':wres-grid')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
+            // CVE-2021-33813
+            exclude group: 'org.jdom', module: 'jdom2'
         }
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
@@ -1021,7 +1027,7 @@ project(':wres-tasker')
         compile 'org.apache.tika:tika-core:1.27'
 
         // To persist job metadata while keeping it relatively fast
-        implementation 'org.redisson:redisson:3.16.0'
+        implementation 'org.redisson:redisson:3.16.1'
 
         // For ToStringBuilder
         compile 'org.apache.commons:commons-lang3:3.12.0'
