--- a/build.gradle
+++ b/build.gradle
@@ -262,6 +262,9 @@ project(':wres-system')
         // connection pooling:
         compile 'com.zaxxer:HikariCP:5.0.0'
 
+        // Java Flight Recorder statistics for JDBC
+        implementation 'com.github.marschall:jfr-jdbc:0.4.0'
+
         // Because org.postgresql:postgresql uses JUL logging, bridge it, here
         // at compile time because we need to expose a class to JUL.
         compile 'org.slf4j:jul-to-slf4j:2.0.0-alpha2'
