Update rabbitmq, update ubi8 images, update a gradle plugin
Refs #93764

--- a/wres-vis/Dockerfile
+++ b/wres-vis/Dockerfile
@@ -1,5 +1,5 @@
 # From a base image, make updates
-FROM registry.access.redhat.com/ubi8/ubi:8.4-206.1626828523
+FROM registry.access.redhat.com/ubi8/ubi:8.4-209
 
 RUN dnf install -y \
     java-11-openjdk-headless-1:11.0.12.0.7-0.el8_4  \
