--- a/wres-redis/redis.conf
+++ b/wres-redis/redis.conf
@@ -369,7 +369,7 @@ proc-title-template "{title} {listen-addr} {server-mode}"
 # Snapshotting can be completely disabled with a single empty string argument
 # as in following example:
 #
-# save ""
+save ""
 #
 # Unless specified otherwise, by default Redis will save the DB:
 #   * After 3600 seconds (an hour) if at least 1 key changed
@@ -428,7 +428,7 @@ rdbchecksum yes
 # sanitize-dump-payload no
 
 # The filename where to dump the DB
-dbfilename dump.rdb
+dbfilename ""
 
 # Remove RDB files used by replication in instances without persistence
 # enabled. By default this option is disabled, however there are environments
@@ -989,7 +989,8 @@ acllog-max-len 128
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+
+maxmemory 900mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1019,6 +1020,7 @@ acllog-max-len 128
 # The default is:
 #
 # maxmemory-policy noeviction
+maxmemory-policy allkeys-lru
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
@@ -1249,7 +1251,7 @@ disable-thp yes
 #
 # Please check https://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The name of the append only file (default: "appendonly.aof")
 
