--- a/wres-broker/Dockerfile
+++ b/wres-broker/Dockerfile
@@ -1,4 +1,4 @@
-FROM rabbitmq:3.8.19-management-alpine
+FROM rabbitmq:3.9.5-management-alpine
 
 # Wish we could do the following, but busybox does not support long gids:
 #RUN addgroup -g 1370800073 wres && adduser -D -u 498 -g 1370800073 wres_docker
@@ -14,7 +14,7 @@ RUN echo "wres_docker:x:498:1370800073::/home/wres_docker:" >> /etc/passwd \
 RUN rabbitmq-plugins enable --offline rabbitmq_auth_mechanism_ssl
 
 WORKDIR /etc/rabbitmq
-COPY nonsrc/rabbitmq.config .
+COPY nonsrc/rabbitmq.conf .
 COPY nonsrc/definitions.json .
 COPY docker-healthcheck /usr/local/bin/
 
