--- a/build.gradle
+++ b/build.gradle
@@ -301,7 +301,11 @@ project(':wres-datamodel')
 
         implementation 'org.slf4j:slf4j-api:2.0.0-alpha2'
         implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-        implementation 'com.github.ben-manes.caffeine:caffeine:3.0.3'
+        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.4' )
+        {
+            // Not used at runtime, bloat
+            exclude group: 'org.checkerframework', module: 'checker-qual'
+        }
 
         // The following four provide units of measure. If used in public
         // method signatures, they will be upgraded to api (not implementation).
@@ -317,12 +321,12 @@ project(':wres-datamodel')
         testImplementation 'org.mockito:mockito-core:3.12.4'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 
         // Backwards compatibility for JUnit 4 tests
         testCompileOnly 'junit:junit:4.13.2'
-        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.2'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.0'
     }
     // Facilitate unit tests with JUnit
     test {
@@ -382,13 +386,13 @@ project(':wres-io')
         implementation 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
         // Update vulnerable kotlin-stdlib that okhttp/okio uses
-        implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.30'
+        implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
 
         // To accurately detect mime types of files.
         implementation 'org.apache.tika:tika-core:1.27'
 
         // To cache
-        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.3' )
+        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.4' )
         {
             // Not used at runtime, bloat
             exclude group: 'org.checkerframework', module: 'checker-qual'
@@ -425,12 +429,12 @@ project(':wres-io')
         testImplementation 'com.h2database:h2:1.4.200'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 
         // Backwards compatibility for JUnit 4 tests
         testImplementation 'junit:junit:4.13.2'
-        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.2'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.0'
 
         // In-memory implementation of a java.nio.file abstract file system api
         // to test writing of files without actually writing files on the host machine
@@ -508,7 +512,7 @@ project(':wres-statistics')
         // Automatically download and use the correct protobuf compiler
         protoc
         {
-            artifact = 'com.google.protobuf:protoc:3.17.3'
+            artifact = 'com.google.protobuf:protoc:3.18.0'
         }
         // So all IDEs/editors can see generated files, use actual src dir:
         generatedFilesBaseDir = "${generatedDir}"
@@ -606,7 +610,7 @@ project(':wres-statistics')
 
     dependencies
     {
-        api 'com.google.protobuf:protobuf-java:3.17.3'
+        api 'com.google.protobuf:protobuf-java:3.18.0'
         implementation 'org.slf4j:slf4j-api:2.0.0-alpha2'
         implementation project(':wres-config')
 
@@ -621,8 +625,8 @@ project(':wres-statistics')
         }
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 
         testImplementation project( ':wres-eventsbroker' )
     }
@@ -770,8 +774,8 @@ project(':wres-config')
         // Trying json-values based on vavr, potential replacement for xjc/jaxb.
         testImplementation 'com.github.imrafaelmerino:json-values:9.1.0'
 
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 
         // May help in future with #37380, may need to modify sources
         // available at https://git.apache.org/cxf-xjc-utils.git in dv dir:
@@ -903,7 +907,7 @@ project(':wres-messages')
         // Automatically download and use the correct protobuf compiler
         protoc
         {
-            artifact = 'com.google.protobuf:protoc:3.17.3'
+            artifact = 'com.google.protobuf:protoc:3.18.0'
         }
         // So all IDEs/editors can see generated files, use actual src dir:
         generatedFilesBaseDir = "${generatedDir}"
@@ -939,7 +943,7 @@ project(':wres-messages')
 
     dependencies
     {
-        api 'com.google.protobuf:protobuf-java:3.17.3'
+        api 'com.google.protobuf:protobuf-java:3.18.0'
 
         implementation 'org.slf4j:slf4j-api:2.0.0-alpha2'
 
@@ -1065,7 +1069,7 @@ project(':wres-tasker')
         implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.0.2'
 
         // To temporarily cache/store-in-RAM job metadata when redis unavailable
-        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.3' )
+        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.4' )
         {
             // Not used at runtime, bloat
             exclude group: 'org.checkerframework', module: 'checker-qual'
@@ -1081,7 +1085,7 @@ project(':wres-tasker')
         implementation 'org.apache.commons:commons-lang3:3.12.0'
 
         // To send/receive messages
-        implementation 'com.google.protobuf:protobuf-java:3.17.3'
+        implementation 'com.google.protobuf:protobuf-java:3.18.0'
 
         runtimeOnly( 'ch.qos.logback:logback-classic:1.3.0-alpha5' )
         {
@@ -1306,7 +1310,7 @@ project(':wres-events')
         implementation group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
         // Cache
-        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.3' )
+        implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.4' )
         {
             // Not used at runtime, bloat
             exclude group: 'org.checkerframework', module: 'checker-qual'
@@ -1323,8 +1327,8 @@ project(':wres-events')
         }
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 
         // Mocking help
         testImplementation 'org.mockito:mockito-core:3.12.4'
@@ -1568,7 +1572,7 @@ dependencies
     // Update the jetty-continuation that above jersey dep depends on
     implementation 'org.eclipse.jetty:jetty-continuation:9.4.43.v20210629'
 
-    implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.3' )
+    implementation( 'com.github.ben-manes.caffeine:caffeine:3.0.4' )
     {
         // Not used at runtime, bloat
         exclude group: 'org.checkerframework', module: 'checker-qual'
@@ -1594,10 +1598,10 @@ dependencies
         exclude group: 'edu.washington.cs.types.checker', module: 'checker-framework'
     }
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
     testImplementation 'org.mockito:mockito-core:3.12.4'
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 }
 
 test
