Use previous commit rabbitmq and tasker images
Includes use of the new rabbitmq.conf (replaces rabbitmq.config)

Refs #95952
Refs #96161

--- a/compose-entry.template.yml
+++ b/compose-entry.template.yml
@@ -70,7 +70,7 @@ services:
          # For certificates and keys that correspond to them:
          - /mnt/wres_keys:/wres_secrets:ro
         environment:
-         - RABBITMQ_CONFIG_FILE=rabbitmq.config
+         - RABBITMQ_CONFIG_FILE=rabbitmq.conf
         # rabbitmq.conf should have 360m specified as high watermark
         mem_limit: 720m
         cap_drop:
