--- a/build.gradle
+++ b/build.gradle
@@ -1590,10 +1590,17 @@ dependencies
         exclude group: 'edu.washington.cs.types.checker', module: 'checker-framework'
     }
 
+    // JUnit 5 API and runtime
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+
+    // Backwards compatibility for JUnit 4 tests
+    testCompileOnly 'junit:junit:4.13.2'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.0'
+
     testImplementation 'org.mockito:mockito-core:3.12.4'
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    testImplementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 }
 
 test
