--- a/build.gradle
+++ b/build.gradle
@@ -307,7 +307,7 @@ project(':wres-datamodel')
         api 'javax.measure:unit-api:2.1.3'
         implementation 'si.uom:si-units:2.1'
         implementation 'tech.units:indriya:2.1.2'
-        implementation 'systems.uom:systems-common:2.1'
+        implementation 'systems.uom:systems-ucum:2.1'
         implementation 'systems.uom:systems-quantity:2.1'
 
         // JCIP annotations
