--- a/wres-eventsbroker/Dockerfile
+++ b/wres-eventsbroker/Dockerfile
@@ -27,7 +27,7 @@ RUN apk add tar && \
 FROM registry.access.redhat.com/ubi8/ubi:8.4-211
 
 RUN dnf install -y \
-    java-11-openjdk-headless-1:11.0.12.0.7-0.el8_4 \
+    java-11-openjdk-headless-1:11.0.13.0.8-1.el8_4.x86_64 \
     procps-ng-3.3.15-6.el8 \
     iproute-5.9.0-4.el8 \
     && dnf clean all
